update notebook Multicaregiver

--- a/MultiCaregiverCryingBaby.ipynb
+++ b/MultiCaregiverCryingBaby.ipynb
@@ -4,29 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I/ Set up"
+    "### I/ Setup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Package"
+    "#### 1. Include"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module DecisionMakingProblems.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "include(\"POMGProblems.jl\")\n",
     "using .POMGProblems"
@@ -36,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. State, Action, Observation, Initial State"
+    "#### 2. State, Action, Observation, belief state"
    ]
   },
   {
@@ -47,7 +39,9 @@
     {
      "data": {
       "text/plain": [
-       "false"
+       "2-element Vector{Float64}:\n",
+       " 0.5\n",
+       " 0.5"
       ]
      },
      "metadata": {},
@@ -55,90 +49,155 @@
     }
    ],
    "source": [
+    "# State\n",
     "SATED = 1\n",
     "HUNGRY = 2\n",
+    "\n",
+    "# Action\n",
     "FEED = 1\n",
     "IGNORE = 2\n",
     "SING = 3\n",
+    "\n",
+    "# Observation\n",
     "CRYING = true\n",
-    "QUIET = false"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "𝒮 = [SATED, HUNGRY]\n",
-    "𝒜 = [FEED, IGNORE, SING]\n",
-    "𝒪 = [CRYING, QUIET]\n",
-    "# initialstate_distr = Deterministic(SATED);"
+    "QUIET = false\n",
+    "\n",
+    "# Belief state\n",
+    "b = [0.5, 0.5]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Transition Function\n",
+    "#### 2. Transition, Reward, Observation Function\n",
     "Code in crying_baby.jl\n",
     "$$ T(sated | hungry, feed) = 100\\% $$\n",
     "$$ T(hungry | hungry, sing) = 100\\% $$\n",
     "$$ T(hungry | hungry, ignore) = 100\\% $$\n",
     "$$ T(sated | sated, feed) = 100\\% $$\n",
     "$$ T(hungry | sated, sing) = 10\\% $$\n",
-    "$$ T(hungry | sated, ignore) = 10\\% $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Observation Function\n",
-    "Code in crying_baby.jl\n",
+    "$$ T(hungry | sated, ignore) = 10\\% $$\n",
+    "\n",
+    "$$ R(hungry) \\rightarrow -10$$\n",
+    "$$ R(feed) \\rightarrow -5$$\n",
+    "$$ R(sing) \\rightarrow -0.5$$\n",
+    "\n",
     "$$ O(cry | feed, hungry) = 80\\% $$\n",
     "$$ O(cry | sing, hungry) = 90\\% $$\n",
     "$$ O(cry | ignore, hungry) = 80\\%$$\n",
     "$$ O(cry | feed, sated) = 10\\%$$\n",
     "$$ O(cry | sing, sated) = 0\\% $$\n",
-    "$$ O(cry | ignore, sated) = 10%$$"
+    "$$ O(cry | ignore, sated) = 10%$$\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Reward Function\n",
-    "Code in crying_baby.jl\n",
-    "$$ hungry \\rightarrow -10$$\n",
-    "$$ feed \\rightarrow -5$$\n",
-    "$$ sing \\rightarrow -0.5$$"
+    "### II/ Crying Baby"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Discount factor\n",
-    "$$γ = 0.9$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 6. POMDP Structure using QuickPOMDPs"
+    "#### 1. POMDP Structure "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mCB = CryingBaby()\n",
+    "decprobCB = POMDP(mCB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Conditional Plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iteration = ValueIteration(6)\n",
+    "alpha_vector = solve_conditional_plan_nonlinear(iteration, decprobCB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(alpha_vector.Γ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Controller Policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = NonlinearProgramming(b, 3)\n",
+    "controllerPolicy = solve_controller_nonlinear(nlp, decprobCB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(controllerPolicy.ψ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### III/ Multi-Caregiver Crying Baby"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. POMG Structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "POMG(0.9, [1, 2], [1, 2], [[1, 2, 3], [1, 2, 3]], Vector{Bool}[[1, 0], [1, 0]], Main.DecisionMakingProblems.var\"#29#34\"{Main.DecisionMakingProblems.BabyPOMG}(Main.DecisionMakingProblems.BabyPOMG(Main.DecisionMakingProblems.CryingBaby\n",
+       "POMG(0.9, [1, 2], [1, 2], [[1, 2, 3], [1, 2, 3]], Vector{Bool}[[1, 0], [1, 0]], Main.POMGProblems.var\"#200#205\"{Main.POMGProblems.BabyPOMG}(Main.POMGProblems.BabyPOMG(CryingBaby\n",
        "  r_hungry: Float64 -10.0\n",
        "  r_feed: Float64 -5.0\n",
        "  r_sing: Float64 -0.5\n",
@@ -147,7 +206,7 @@
        "  p_cry_when_not_hungry: Float64 0.1\n",
        "  p_cry_when_hungry_in_sing: Float64 0.9\n",
        "  γ: Float64 0.9\n",
-       ")), Main.DecisionMakingProblems.var\"#30#35\"{Main.DecisionMakingProblems.BabyPOMG}(Main.DecisionMakingProblems.BabyPOMG(Main.DecisionMakingProblems.CryingBaby\n",
+       ")), Main.POMGProblems.var\"#201#206\"{Main.POMGProblems.BabyPOMG}(Main.POMGProblems.BabyPOMG(CryingBaby\n",
        "  r_hungry: Float64 -10.0\n",
        "  r_feed: Float64 -5.0\n",
        "  r_sing: Float64 -0.5\n",
@@ -156,7 +215,7 @@
        "  p_cry_when_not_hungry: Float64 0.1\n",
        "  p_cry_when_hungry_in_sing: Float64 0.9\n",
        "  γ: Float64 0.9\n",
-       ")), Main.DecisionMakingProblems.var\"#31#36\"{Main.DecisionMakingProblems.BabyPOMG}(Main.DecisionMakingProblems.BabyPOMG(Main.DecisionMakingProblems.CryingBaby\n",
+       ")), Main.POMGProblems.var\"#202#207\"{Main.POMGProblems.BabyPOMG}(Main.POMGProblems.BabyPOMG(CryingBaby\n",
        "  r_hungry: Float64 -10.0\n",
        "  r_feed: Float64 -5.0\n",
        "  r_sing: Float64 -0.5\n",
@@ -173,81 +232,179 @@
     }
    ],
    "source": [
-    "m = MultiCaregiverCryingBaby()\n",
-    "decprob = POMG(m)"
+    "mMCB = MultiCaregiverCryingBaby()\n",
+    "decprobMCB = POMG(mMCB)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Policy"
+    "#### 2. Solution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Belief"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## II/ Solution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. ConditionalPlan"
+    "##### Nash Equilibrium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iteration = ValueIteration(20)\n",
-    "alpha_vector = solve(iteration, decprob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Any[[-17.366774723525896, -27.366774723525896], [-13.997323053138155, -35.9430021666344]]"
+     "ename": "ErrorException",
+     "evalue": "type ConditionalPlan has no field subplans",
+     "output_type": "error",
+     "traceback": [
+      "type ConditionalPlan has no field subplans\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] getproperty\n",
+      "    @ .\\Base.jl:42 [inlined]\n",
+      "  [2] evaluate_plan(𝒫::POMG, π::Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan}, s::Int64)\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Policy\\ConditionalPlan.jl:19\n",
+      "  [3] (::Main.POMGProblems.var\"#25#27\"{POMG, Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan}})(s::Int64)\n",
+      "    @ Main.POMGProblems .\\none:0\n",
+      "  [4] iterate\n",
+      "    @ .\\generator.jl:47 [inlined]\n",
+      "  [5] collect(itr::Base.Generator{Vector{Int64}, Main.POMGProblems.var\"#25#27\"{POMG, Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan}}})\n",
+      "    @ Base .\\array.jl:724\n",
+      "  [6] utility(𝒫::POMG, b::Vector{Float64}, π::Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan})\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Policy\\ConditionalPlan.jl:23\n",
+      "  [7] (::Main.POMGProblems.var\"#148#151\"{POMG, Vector{Float64}})(π::Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan})\n",
+      "    @ Main.POMGProblems .\\none:0\n",
+      "  [8] iterate\n",
+      "    @ .\\generator.jl:47 [inlined]\n",
+      "  [9] _all(f::Base.var\"#318#320\", itr::Base.Generator{Matrix{Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan}}, Main.POMGProblems.var\"#148#151\"{POMG, Vector{Float64}}}, #unused#::Colon)\n",
+      "    @ Base .\\reduce.jl:1156\n",
+      " [10] all\n",
+      "    @ .\\reduce.jl:1152 [inlined]\n",
+      " [11] Dict(kv::Base.Generator{Matrix{Tuple{Main.POMGProblems.ConditionalPlan, Main.POMGProblems.ConditionalPlan}}, Main.POMGProblems.var\"#148#151\"{POMG, Vector{Float64}}})\n",
+      "    @ Base .\\dict.jl:131\n",
+      " [12] solve_pomg_nash(M::POMGNashEquilibrium, 𝒫::POMG)\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Solver\\POMGNashEquilibrium.jl:24\n",
+      " [13] top-level scope\n",
+      "    @ c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\MultiCaregiverCryingBaby.ipynb:2\n",
+      " [14] eval\n",
+      "    @ .\\boot.jl:373 [inlined]\n",
+      " [15] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base .\\loading.jl:1196\n",
+      " [16] #invokelatest#2\n",
+      "    @ .\\essentials.jl:716 [inlined]\n",
+      " [17] invokelatest\n",
+      "    @ .\\essentials.jl:714 [inlined]\n",
+      " [18] (::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:18\n",
+      " [19] withpath(f::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\repl.jl:185\n",
+      " [20] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:14\n",
+      " [21] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\JSONRPC\\src\\typed.jl:67\n",
+      " [22] serve_notebook(pipename::String; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:94\n",
+      " [23] top-level scope\n",
+      "    @ c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\notebook\\notebook.jl:12\n",
+      " [24] include(mod::Module, _path::String)\n",
+      "    @ Base .\\Base.jl:418\n",
+      " [25] exec_options(opts::Base.JLOptions)\n",
+      "    @ Base .\\client.jl:292\n",
+      " [26] _start()\n",
+      "    @ Base .\\client.jl:495"
      ]
     }
    ],
    "source": [
-    "print(alpha_vector.Γ)"
+    "pomgNE = POMGNashEquilibrium(b, 6)\n",
+    "solve_pomg_nash(pomgNE, decprobMCB)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "using Plots\n",
-    "default(fontfamily=\"Computer Modern\", framestyle=:box) # LaTex-style"
+    "##### Dynamic Programming"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "type ConditionalPlan has no field subplans",
+     "output_type": "error",
+     "traceback": [
+      "type ConditionalPlan has no field subplans\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] getproperty\n",
+      "    @ .\\Base.jl:42 [inlined]\n",
+      "  [2] evaluate_plan(𝒫::POMG, π::Vector{Main.POMGProblems.ConditionalPlan}, s::Int64)\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Policy\\ConditionalPlan.jl:19\n",
+      "  [3] (::Main.POMGProblems.var\"#175#182\"{POMG, Int64, Main.POMGProblems.var\"#π#180\"{Int64, Vector{Int64}}})(::Tuple{Main.POMGProblems.ConditionalPlan, Tuple{Main.POMGProblems.ConditionalPlan}, Int64})\n",
+      "    @ Main.POMGProblems .\\none:0\n",
+      "  [4] iterate\n",
+      "    @ .\\generator.jl:47 [inlined]\n",
+      "  [5] _all\n",
+      "    @ .\\reduce.jl:1156 [inlined]\n",
+      "  [6] all\n",
+      "    @ .\\reduce.jl:1152 [inlined]\n",
+      "  [7] Dict(kv::Base.Generator{Base.Iterators.ProductIterator{Tuple{Vector{Main.POMGProblems.ConditionalPlan}, Vector{Tuple{Main.POMGProblems.ConditionalPlan}}, Vector{Int64}}}, Main.POMGProblems.var\"#175#182\"{POMG, Int64, Main.POMGProblems.var\"#π#180\"{Int64, Vector{Int64}}}})\n",
+      "    @ Base .\\dict.jl:131\n",
+      "  [8] is_dominated(𝒫::POMG, Π::Vector{Vector{Main.POMGProblems.ConditionalPlan}}, i::Int64, πi::Main.POMGProblems.ConditionalPlan)\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Solver\\DynamicProgramming.jl:44\n",
+      "  [9] prune_dominated!(Π::Vector{Vector{Main.POMGProblems.ConditionalPlan}}, 𝒫::POMG)\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Solver\\DynamicProgramming.jl:30\n",
+      " [10] DynamicProgramming(M::POMGDynamicProgramming, 𝒫::POMG)\n",
+      "    @ Main.POMGProblems c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\Solver\\DynamicProgramming.jl:17\n",
+      " [11] top-level scope\n",
+      "    @ c:\\Users\\COMPUTER\\Desktop\\ai-lab1\\MultiCaregiverCryingBaby.ipynb:2\n",
+      " [12] eval\n",
+      "    @ .\\boot.jl:373 [inlined]\n",
+      " [13] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base .\\loading.jl:1196\n",
+      " [14] #invokelatest#2\n",
+      "    @ .\\essentials.jl:716 [inlined]\n",
+      " [15] invokelatest\n",
+      "    @ .\\essentials.jl:714 [inlined]\n",
+      " [16] (::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:18\n",
+      " [17] withpath(f::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\repl.jl:185\n",
+      " [18] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:14\n",
+      " [19] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\JSONRPC\\src\\typed.jl:67\n",
+      " [20] serve_notebook(pipename::String; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\packages\\VSCodeServer\\src\\serve_notebook.jl:94\n",
+      " [21] top-level scope\n",
+      "    @ c:\\Users\\COMPUTER\\.vscode\\extensions\\julialang.language-julia-1.5.8\\scripts\\notebook\\notebook.jl:12\n",
+      " [22] include(mod::Module, _path::String)\n",
+      "    @ Base .\\Base.jl:418\n",
+      " [23] exec_options(opts::Base.JLOptions)\n",
+      "    @ Base .\\client.jl:292\n",
+      " [24] _start()\n",
+      "    @ Base .\\client.jl:495"
+     ]
+    }
+   ],
+   "source": [
+    "pomgDP = POMGDynamicProgramming(b, 6)\n",
+    "DPPolicy = DynamicProgramming(pomgDP, decprobMCB) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###"
+   ]
   }
  ],
  "metadata": {
