--- a/MultiCaregiverCryingBaby.ipynb
+++ b/MultiCaregiverCryingBaby.ipynb
@@ -338,8 +338,8 @@
       "Number of equality constraint Jacobian evaluations   = 74\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 73\n",
-      "Total CPU secs in IPOPT (w/o function evaluations)   =      2.133\n",
-      "Total CPU secs in NLP function evaluations           =      2.678\n",
+      "Total CPU secs in IPOPT (w/o function evaluations)   =      2.489\n",
+      "Total CPU secs in NLP function evaluations           =      2.909\n",
       "\n",
       "EXIT: Optimal Solution Found.\n"
      ]
@@ -540,7 +540,7 @@
        "        <title>Julia D3Tree</title>\n",
        "    </head>\n",
        "    <body>\n",
-       "    <div id=\"treevisLVKmVuUa\">\n",
+       "    <div id=\"treevis7xCierxk\">\n",
        "    <style>\n",
        "        \n",
        ".node {\n",
@@ -610,9 +610,9 @@
        "    </style>\n",
        "    <script>\n",
        "       (function(){\n",
-       "        var treeData = {\"children\":[[2,9],[3,6],[4,5],[],[],[7,8],[],[],[10,13],[11,12],[],[],[14,15],[],[]],\"text\":[\"\\nIGNORE\",\"Quiet\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\"],\"tooltip\":[\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\"],\"style\":[\"\",\"stroke:blue\",\"stroke:blue\",\"stroke:blue\",\"stroke:red\",\"stroke:red\",\"stroke:blue\",\"stroke:red\",\"stroke:red\",\"stroke:blue\",\"stroke:blue\",\"stroke:red\",\"stroke:red\",\"stroke:blue\",\"stroke:red\"],\"link_style\":[\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\"],\"title\":\"Julia D3Tree\",\"options\":{\"init_expand\":5,\"text\":[\"\\nIGNORE\",\"Quiet\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\"],\"style\":[\"\",\"stroke:blue\",\"stroke:blue\",\"stroke:blue\",\"stroke:red\",\"stroke:red\",\"stroke:blue\",\"stroke:red\",\"stroke:red\",\"stroke:blue\",\"stroke:blue\",\"stroke:red\",\"stroke:red\",\"stroke:blue\",\"stroke:red\"]}};\n",
+       "        var treeData = {\"children\":[[2,9],[3,6],[4,5],[],[],[7,8],[],[],[10,13],[11,12],[],[],[14,15],[],[]],\"text\":[\"\\nIGNORE\",\"Quiet\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\"],\"tooltip\":[\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\"],\"style\":[\"\",\"stroke:green\",\"stroke:green\",\"stroke:green\",\"stroke:red\",\"stroke:red\",\"stroke:green\",\"stroke:red\",\"stroke:red\",\"stroke:green\",\"stroke:green\",\"stroke:red\",\"stroke:red\",\"stroke:green\",\"stroke:red\"],\"link_style\":[\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\",\"\"],\"title\":\"Julia D3Tree\",\"options\":{\"init_expand\":5,\"text\":[\"\\nIGNORE\",\"Quiet\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nIGNORE\",\"Quiet\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\",\"Crying\\nFEED\",\"Quiet\\nIGNORE\",\"Crying\\nIGNORE\"],\"style\":[\"\",\"stroke:green\",\"stroke:green\",\"stroke:green\",\"stroke:red\",\"stroke:red\",\"stroke:green\",\"stroke:red\",\"stroke:red\",\"stroke:green\",\"stroke:green\",\"stroke:red\",\"stroke:red\",\"stroke:green\",\"stroke:red\"]}};\n",
        "        var rootID = 1-1;\n",
-       "        var div = \"treevisLVKmVuUa\";\n",
+       "        var div = \"treevis7xCierxk\";\n",
        "        var initExpand = 5\n",
        "        var initDuration = 750\n",
        "        var svgHeight = 600\n",
@@ -895,9 +895,8 @@
     "number = Vector([1])\n",
     "children = Vector{Vector}()\n",
     "text = Vector{String}()\n",
-    "style = Vector{String}()\n",
     "\n",
-    "tree = drawConditionalPlanTree(plan, number, children, text, true, style)\n",
+    "tree = drawConditionalPlanTree(plan, number, children, text, true)\n",
     "tree"
    ]
   },
